static/styles.css
/* ... */
.mobile-nav-header {
  flex: 1;

  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 1rem;
}

.burger-menu {
  margin-left: 1rem;

  min-width: 2.5rem;
  background: none;
  border: none;
  font-size: 1.2rem;
  cursor: pointer;
  padding: 0.5rem;
  color: var(--pico-primary);
  border: 1px solid var(--pico-primary);
  border-radius: 0.5rem;
}

.mobile-nav-content {
  display: none;
}

.mobile-nav-content.show {
  display: block;
  background-color: var(--pico-background-color);
  position: absolute;
  top: 5rem;
  left: 0;
  right: 0;
  z-index: 1100;
}

.mobile-nav-content ul {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.mobile-nav-content li {
  list-style: none;
}

.mobile-nav-search-item {
  margin-left: auto;
  margin-right: auto;

  display: flex;
  flex-direction: row;
  align-items: center;
}

.mobile-nav-theme-switcher {
  margin: 0 1rem;
}

.mobile-active {
  background-color: var(--pico-primary-focus);
  color: var(--pico-contrast);
  font-weight: bold;
}

@media (max-width: 500px) {
  h3 span {
    display: none;
  }
}

.compare-form-examples {
  display: flex;
  gap: 0.5rem;
  justify-content: center;

  @media (max-width: 500px) {
    flex-direction: column;
  }
}

.similar-devices-tags {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  justify-content: center;
  margin-bottom: 1rem;
  cursor: pointer;

}

.tag {  display: flex;
  flex-flow: row wrap;
  max-width: fit-content;

  background-color: var(--pico-primary);
  padding: 0.25rem 0.5rem;
  border-radius: var(--pico-border-radius);
  align-items: center;
  gap: 0.25rem;
  color: var(--pico-contrast);
  font-size: 0.6rem;

  &:hover {
    background-color: var(--pico-contrast);
    color: var(--pico-primary);
  }
}

